--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.com/"
+baseURL = "https://norioakimoto.github.io/"
 languageCode = "en-us"
 title = "Minimal"
 theme = "minimal"
