--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
-baseURL = "https://norioakimoto.github.io/"
-languageCode = "en-us"
+baseURL = "https://norioakimoto.github.io/norioakimoto/"
+languageCode = "ja"
 title = "Minimal"
 theme = "minimal"
 disqusShortname = "username" # delete this to disable disqus comments
